update website and documentation link icons, remove notices count from SP accounts

--- a/templates/public.html
+++ b/templates/public.html
@@ -362,7 +362,7 @@
                     <div class="flex-this mt-8 description-sm">
                         {% if service_provider.website %}
                             <p class="mt-0 mb-0 mr-16">
-                                <i class="fa-regular fa-globe" title="Website"></i>
+                                <i class="fa-solid fa-globe" title="Website"></i>
                                 <a
                                     class="default-a ml-5"
                                     href="{{ service_provider.website }}"
@@ -374,7 +374,7 @@
 
                         {% if service_provider.documentation %}
                             <p class="mt-0 mb-0">
-                                <i class="fa-regular fa-book" title="Documentation"></i>
+                                <i class="fa-solid fa-book" title="Documentation"></i>
                                 <a
                                     class="default-a ml-5"
                                     href="{{ service_provider.documentation }}"
