feat: removed (territories) from ui

--- a/templates/account_settings_pages/_community-boundary.html
+++ b/templates/account_settings_pages/_community-boundary.html
@@ -56,7 +56,7 @@
         <div id="preview-container-wrapper">
             <div id="preview-boundary-container">
                 <strong class="center-boundary-container-item-vertically">
-                    {{ community.name_of_boundary }} (territories)
+                    {{ community.name_of_boundary }}
                 </strong>
 
                 <div id="boundary-container-right">
