--- a/templates/boundary/show-remove-preexisting.html
+++ b/templates/boundary/show-remove-preexisting.html
@@ -37,8 +37,11 @@
         border-radius: 4px;
         max-width: 560px;
     }
-    .edit_name_icon{
+    #edit_name_icon{
         margin-left: 10px
+    }
+    #edit_name_icon.disabled {
+        color: grey;
     }
 </style>
 
@@ -64,14 +67,28 @@
       BoundaryPayLoad.name = self.value
       document.querySelector('#boundary-data').value = JSON.stringify(BoundaryPayLoad)
     }
+
+    function enableNameInput(self) {
+      self.classList.add('disabled')
+      document.querySelector('.name_of_boundary').disabled = false
+    }
+    function disableNameInput(self) {
+      self.disabled = true
+      document.querySelector('#edit_name_icon').classList.remove('disabled')
+    }
 </script>
 <div id="preview-boundary-container">
 
     <div class="center-boundary-container-item-vertically" style="width: calc(100% - 300px);">
         <div style="display: flex">
-            <input disabled class='name_of_boundary' value="{{ entity.name_of_boundary }}" onchange="shapeFileChange(this)">
+            <input disabled class='name_of_boundary' value="{{ entity.name_of_boundary }}"
+                   onchange="shapeFileChange(this)"
+                   onblur="disableNameInput(this)"
+            >
             {% if 'native-land.ca' not in entity.source_of_boundary %}
-                <i class="fa-solid fa-edit fa-2x pointer edit_name_icon" disabled></i>
+                <i id="edit_name_icon" class="fa-solid fa-edit fa-2x pointer"
+                    onclick="enableNameInput(this)"
+                ></i>
             {% endif %}
         </div>
     </div>
