--- a/templates/partials/_update-boundary-main-area.html
+++ b/templates/partials/_update-boundary-main-area.html
@@ -41,6 +41,13 @@
         border-radius: 4px;
         max-width: 560px;
     }
+
+    #edit_name_icon{
+        margin-left: 10px
+    }
+    #edit_name_icon.disabled {
+        color: grey;
+    }
 </style>
 
 <script>
@@ -64,6 +71,15 @@
 
       enableContinueButton()
     }
+
+    function enableNameInput(self) {
+      self.classList.add('disabled')
+      document.querySelector('.name_of_boundary').disabled = false
+    }
+    function disableNameInput(self) {
+      self.disabled = true
+      document.querySelector('#edit_name_icon').classList.remove('disabled')
+    }
 </script>
 <div class="flex-this space-between">
     <div><h2 class="mt-0">Community Boundary</h2></div>
@@ -84,9 +100,15 @@
 
             <div class="center-boundary-container-item-vertically" style="width: calc(100% - 300px);">
                 <div style="display: flex">
-                    <input class='name_of_boundary' value="{{ community.name_of_boundary }}" onchange="shapeFileChange(this)"
-                    {% if 'native-land.ca' in community.source_of_boundary %}disabled{% endif %}
+                    <input disabled class='name_of_boundary' value="{{ community.name_of_boundary }}"
+                           onchange="shapeFileChange(this)"
+                           onblur="disableNameInput(this)"
                     >
+                    {% if 'native-land.ca' not in community.source_of_boundary %}
+                        <i id="edit_name_icon" class="fa-solid fa-edit fa-2x pointer"
+                            onclick="enableNameInput(this)"
+                        ></i>
+                    {% endif %}
                 </div>
             </div>
 
