cleaned up connections cards to call from partial template

--- a/templates/serviceproviders/connections.html
+++ b/templates/serviceproviders/connections.html
@@ -1,184 +1,3 @@
 {% extends 'account-base.html' %} {% block title %} Connections {% endblock %}{% load static %} {% block service_provider_content %}
-
-<div class="content-card-v2 content-card-space">
-    <div class="w-70">
-        <h2 class="mt-0">Connections</h2>
-        <p>
-            Connections are established when Hub accounts are linked to your platform. Here you can see and manage all Hub accounts that have linked to your Service Provider account.
-        </p>
-    </div>
-</div>
-
-{% for institution in institutions %}
-    <div class="dashcard">
-        <div class="flex-this">
-            <!-- Account Image -->
-            <div class="dashcard-img-container">
-                <img loading="lazy"
-                    class="profile-img"
-                    src="{% if institution.image %} {{ institution.image.url }} {% else %} {% static 'images/placeholders/institution-place.jpg' %}{% endif %}"
-                    alt="{{ institution.institution_name }} image"
-                >
-            </div>
-
-            <!-- Account Information -->
-            <div class="flex-this column w-50">
-                <div class="subscribed-icon-wrapper">
-                    <h3 class="dashcard-h3 darkteal-text">{{ institution.institution_name }}</h3>
-                    {% if institution.is_subscribed %}
-                        <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
-                    {% endif %}
-                </div>
-                <div>
-                    <p class="dashcard-subheader">Institution | Members: {% if institution.get_member_count < 10 %}0{{ institution.get_member_count }}{% else %}{{ institution.get_member_count }}{% endif %} |
-                        Location: {{ institution.get_location }}
-                    </p>
-                </div>
-                <div><p class="dashcard-description description-sm">{% if institution.description %}{{ institution.description }} {% else %} No description provided. {% endif %}</p></div>
-            </div>
-
-            <!-- Buttons -->
-            <div class="dashcard-btn-container ml-auto">
-                <div class="mr-8">
-                    <a class="primary-btn action-btn" href="{% url 'public-institution' institution.id %}">View public page</a>
-                </div>
-                <div>
-                    <button name="disconnectAccountbtn" data-name="{{ institution.institution_name }}" data-id="{{ institution.id }}_institution" class="primary-btn disconnect-btn">Disconnect <i class="fa-solid fa-link-simple-slash"></i></button>
-                </div>
-            </div>
-
-        </div>
-    </div>
-{% endfor %}
-
-{% for community in communities %}
-    <div class="dashcard">
-        <div class="flex-this">
-            <!-- Account Image -->
-            <div class="dashcard-img-container">
-                <img loading="lazy"
-                    class="profile-img"
-                    src="{% if community.image %} {{ community.image.url }} {% else %} {% static 'images/placeholders/community-place.jpg' %}{% endif %}"
-                    alt="{{ community.community_name }} image"
-                >
-            </div>
-
-            <!-- Account Information -->
-            <div class="flex-this column w-50">
-                <div class="subscribed-icon-wrapper">
-                    <h3 class="dashcard-h3 darkteal-text">{{ community.community_name }}</h3>
-                    {% if community.is_approved %}
-                        <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Member"></i>
-                    {% endif %}
-                </div>
-                <div>
-                    <p class="dashcard-subheader">Community | Members: {% if community.get_member_count < 10 %}0{{ community.get_member_count }}{% else %}{{ community.get_member_count }}{% endif %} |
-                        Location: {{ community.get_location }}
-                    </p>
-                </div>
-                <div><p class="dashcard-description description-sm">{% if community.description %}{{ community.description }} {% else %} No description provided. {% endif %}</p></div>
-            </div>
-
-            <!-- Buttons -->
-            <div class="dashcard-btn-container ml-auto">
-                <div class="mr-8">
-                    <a class="primary-btn action-btn" href="{% url 'public-community' community.id %}">View public page</a>
-                </div>
-                <div>
-                    <button name="disconnectAccountbtn" data-name="{{ community.community_name }}" data-id="{{ community.id }}_community" class="primary-btn disconnect-btn">Disconnect <i class="fa-solid fa-link-simple-slash"></i></button>
-                </div>
-            </div>
-
-        </div>
-    </div>
-{% endfor %}
-
-{% for researcher in researchers %}
-    <div class="dashcard">
-        <div class="flex-this">
-            <!-- Account Image -->
-            <div class="dashcard-img-container">
-                <img loading="lazy"
-                    class="profile-img"
-                    src="{% if researcher.image %} {{ researcher.image.url }} {% else %} {% static 'images/placeholders/researcher-place.jpg' %}{% endif %}"
-                    alt="{{ researcher.researcher_name }} image"
-                >
-            </div>
-
-            <!-- Account Information -->
-            <div class="flex-this column w-50">
-                <div class="subscribed-icon-wrapper">
-                    <h3 class="dashcard-h3 darkteal-text">
-                        {% firstof researcher.user.get_full_name researcher.user.username %}
-                    </h3>
-                    {% if researcher.is_subscribed %}
-                        <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Member"></i>
-                    {% endif %}
-                </div>
-                <div>
-                    <p class="dashcard-subheader">Researcher | Location: {{ profile.get_location }}
-                    </p>
-                </div>
-                <div><p class="dashcard-description description-sm">{% if researcher.description %}{{ researcher.description }} {% else %} No description provided. {% endif %}</p></div>
-            </div>
-
-            <!-- Buttons -->
-            <div class="dashcard-btn-container ml-auto">
-                <div class="mr-8">
-                    <a class="primary-btn action-btn" href="{% url 'public-researcher' researcher.id %}">View public page</a>
-                </div>
-                <div>
-                    <button name="disconnectAccountbtn" data-name="{% firstof researcher.user.get_full_name researcher.user.username %}" data-id="{{ researcher.id }}_researcher" class="primary-btn disconnect-btn">Disconnect <i class="fa-solid fa-link-simple-slash"></i></button>
-                </div>
-            </div>
-
-        </div>
-    </div>
-{% endfor %}
-
-<!-- Disconnect Account Modal -->
-<div id="disconnectAccountmodal" class="modal hide">
-
-    <div class="modal-defaults share-modal flex-this column w-100">
-
-        <div class="flex-this space-between">
-            <div class="flex-this">
-                <h2 class="primary-black-text mt-0">Disconnect this account?</h2>
-            </div>
-        </div>
-
-        <div class="w-100">
-            <p class="mt-0">Are you sure you want to disconnect <span id="disconnectAccountname" class="bold"></span> from your account? They will no longer be able to:</p>
-            <ul>
-                <li>See basic account information</li>
-                <li>See your Projects</li>
-            </ul>
-            <p>The admin of this account will be notified of the disconnection.</p>
-
-            <div class="flex-this column gap-half">
-                <form id="disconnectAccountForm" method="POST">
-                    {% csrf_token %}
-                    <button id="continueAccountDisconnectBtn" class="primary-btn action-btn w-100" name="disconnectAccount" value="">Yes, disconnect this account</button>
-                </form>
-                <div id="closeDisconnectAccountmodal" class="primary-btn white-btn w-100">Cancel</div>
-            </div>
-
-        </div>
-    </div>
-
-</div>
-
-<script>
-    const disconnectBtns = document.querySelectorAll(`[name="disconnectAccountbtn"]`);
-    const disconnectAccountmodal = document.getElementById('disconnectAccountmodal')
-    disconnectBtns.forEach(btn => {
-        btn.addEventListener('click', () => {
-            openModal('disconnectAccountmodal', 'closeDisconnectAccountmodal');
-            console.log(btn.dataset.name)
-            disconnectAccountname.innerHTML = btn.dataset.name;
-            continueAccountDisconnectBtn.value = btn.dataset.id;
-        });
-    });
-</script>
-
+    {% include 'partials/_connections.html' %}
 {% endblock %}
