--- a/templates/communities/connections.html
+++ b/templates/communities/connections.html
@@ -1,204 +1,3 @@
-{% extends 'account-base.html' %} {% block title %} Connections {% endblock %}{% load static %} {% block community_content %}{% load custom_project_tags %}{% load custom_tags %}
-    <div class="content-card-v2 content-card-space">
-        <div class="w-70">
-            <h2 class="mt-0">Connections</h2>
-            <p>
-                Connections are established when Labels are applied to a Project.
-                Here you can see all the accounts that have notified your community of a Project where you have applied Labels.
-            </p>
-        </div>
-    </div>
-
-    {% for institution in institutions %}
-        <div class="dashcard">
-            <div class="flex-this">
-
-                <div class="dashcard-img-container">
-                    <img loading="lazy" 
-                        class="profile-img" 
-                        src="{% if institution.image %} {{ institution.image.url }} {% else %} {% static 'images/placeholders/institution-place.jpg' %}{% endif %}" 
-                        alt="{{ institution.institution_name }} image"
-                    >
-                </div>
-                <div class="flex-this column dashcard-text-container">
-                    <div class="subscribed-icon-wrapper">
-                        <h3 class="dashcard-h3 darkteal-text">{{ institution }}</h3>
-                        {% if institution.is_subscribed %}
-                            <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
-                        {% endif %}
-                    </div>
-                    <div>
-                        <p class="dashcard-subheader">Institution | Members: {% if institution.get_member_count < 10 %}0{{ institution.get_member_count }}{% else %}{{ institution.get_member_count }}{% endif %} | 
-                            Location: {{ institution.get_location }}
-                        </p>
-                    </div>
-                    <div><p class="dashcard-description description-sm">{% if institution.description %}{{ institution.description }} {% else %} No description provided. {% endif %}</p></div>
-                </div>
-
-                <div class="dashcard-btn-container">
-                    <div class="mr-8">
-                        <a class="primary-btn action-btn" href="{% url 'public-institution' institution.id %}">View public page</a>
-                    </div>
-                    <div>
-                        <span id="{{ institution.institution_name }}" class="primary-btn white-btn" onclick="showMore(this)">Show More <i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                    </div>
-                </div>
-
-            </div>
-
-            <div id="expand-div-{{ institution.institution_name }}" class="hide">
-                <div class="border-bottom-dash-teal">
-                    <p class="mb-0">
-                        <span class="bold">Account Contact Name</span> | {% firstof institution.institution_creator.get_full_name  institution.institution_creator.username %}
-                        <span class="bold ml-8">Account Contact Email</span> | {{ institution.institution_creator.email }}
-                        <span class="bold ml-8">Website</span> | {{ institution.website }} <br><br>
-                    </p>                        
-                </div>
-
-                <div>
-                    <h3> Projects </h3>
-                    {% connections_collaborative_projects community institution as projects %}
-
-                    <table class="projects-table">
-                        <tr>
-                            <th><i class="fa-regular fa-line-columns"></i> Title</th>
-                            <th><i class="fa-light fa-user"></i> Creator</th>
-                            <th><i class="fa-light fa-calendar"></i> Last updated</th>
-                            <th>Visibility</th>
-                        </tr>
-        
-                        {% for project in projects %}
-                            {% include 'projects/project-overview.html' %}
-                        {% endfor %}
-                    </table>
-                </div>
-            </div>
-
-        </div>
-    {% endfor %}
-
-    {% for researcher in researchers %}
-        <div class="dashcard">
-            <div class="flex-this">
-                <div class="researcher-img-container">
-                    <img loading="lazy" 
-                        src=" {% if researcher.image %} {{ researcher.image.url }} {% else %} {% static 'images/placeholders/researcher-place.jpg' %} {% endif %}" 
-                        alt="{{ researcher.researcher_name }} image"
-                    >
-                </div>
-                <div class="flex-this column dashcard-text-container">
-                    <div class="subscribed-icon-wrapper">
-                        <h3 class="dashcard-h3 darkteal-text">
-                          {% firstof researcher.user.get_full_name researcher.user.username %}
-                        </h3>
-                        {% if researcher.is_subscribed %}
-                          <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
-                        {% endif %}
-                    </div>
-                    <div>
-                        <p class="dashcard-subheader">Researcher | Location: {{ profile.get_location }} </p>
-                    </div>
-                    <div><p class="dashcard-description description-sm">{% if researcher.description %}{{ researcher.description }} {% else %} No description provided. {% endif %}</p></div>
-                </div>
-                <div class="dashcard-btn-container">
-                    <div class="mr-8">
-                        <a class="primary-btn action-btn" href="{% url 'public-researcher' researcher.id %}">View public page</a>
-                    </div>
-                    <div>
-                        <span id="{{ researcher.id }}" class="primary-btn white-btn" onclick="showMore(this)">Show More <i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                    </div>
-                </div>
-            </div>
-
-            <div id="expand-div-{{ researcher.id }}" class="hide">
-                <div class="border-bottom-dash-teal">
-                    <p class="mb-0">
-                        <span class="bold">Contact Email</span> | {% if researcher.contact_email %} {{ researcher.contact_email }} {% else %} {{ researcher.user.email }} {% endif %} <br><br>
-                    </p>   
-                </div> 
-                
-                <div>
-                    <h3> Projects </h3>
-                    {% connections_collaborative_projects community researcher as projects %}
-                    <table class="projects-table">
-                        <tr>
-                            <th><i class="fa-regular fa-line-columns"></i> Title</th>
-                            <th><i class="fa-light fa-user"></i> Creator</th>
-                            <th><i class="fa-light fa-calendar"></i> Last updated</th>
-                            <th>Visibility</th>
-                        </tr>
-        
-                        {% for project in projects %}
-                            {% include 'projects/project-overview.html' %}
-                        {% endfor %}
-                    </table>
-                </div>
-
-            </div>
-
-        </div>
-    {% endfor %}
-
-    {% for comm in communities %}
-        <div class="dashcard">
-            <div class="flex-this">
-
-                <div class="dashcard-img-container">
-                    <img loading="lazy" 
-                        class="profile-img" 
-                        src="{% if comm.image %} {{ comm.image.url }} {% else %} {% static 'images/placeholders/community-place.jpg' %}{% endif %}" 
-                        alt="{{ comm.community_name }} image"
-                    >
-                </div>
-                <div class="flex-this column dashcard-text-container">
-                    <div class="subscribed-icon-wrapper">
-                        <h3 class="dashcard-h3 darkteal-text">{{ comm }}</h3>
-                        {% if comm.is_approved %}
-                            <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Active"></i>
-                        {% endif %}
-                    </div>
-                    <div>
-                        <p class="dashcard-subheader">Community | Members: {% if comm.get_member_count < 10 %}0{{ comm.get_member_count }}{% else %}{{ comm.get_member_count }}{% endif %} | 
-                            Location: {{ comm.get_location }}
-                        </p>
-                    </div>
-                    <div><p class="dashcard-description description-sm">{% if comm.description %}{{ comm.description }}{% else %} No description provided. {% endif %}</p></div>
-                </div>
-
-                <div class="dashcard-btn-container">
-                    <div class="mr-8">
-                        <a class="primary-btn action-btn" href="{% url 'public-community' comm.id %}">View public page</a>
-                    </div>
-                    <div>
-                        <span id="{{ comm.community_name }}" class="primary-btn white-btn" onclick="showMore(this)">Show More <i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                    </div>
-                </div>
-            </div>
-            <div id="expand-div-{{ comm.community_name }}" class="hide">
-                <div class="border-bottom-dash-teal">
-                    <p class="mb-0">
-                        <span class="bold">Account Contact Name</span> | {% firstof comm.community_creator.get_full_name comm.community_creator.get_full_name %}
-                        <span class="bold ml-8">Account Contact Email</span> | {{ comm.community_creator.email }} <br><br>
-                    </p>      
-                </div>   
-                
-                <div>
-                    <h3>Projects </h3>
-                    {% connections_collaborative_projects community comm as projects %}
-                    <table class="projects-table">
-                        <tr>
-                            <th><i class="fa-regular fa-line-columns"></i> Title</th>
-                            <th><i class="fa-light fa-user"></i> Creator</th>
-                            <th><i class="fa-light fa-calendar"></i> Last updated</th>
-                            <th>Visibility</th>
-                        </tr>
-        
-                        {% for project in projects %}
-                            {% include 'projects/project-overview.html' %}
-                        {% endfor %}
-                    </table>                        
-                </div>
-            </div>
-        </div>
-    {% endfor %}
+{% extends 'account-base.html' %} {% block title %} Connections {% endblock %}{% load static %}{% block community_content %}
+    {% include 'partials/_connections.html' %}
 {% endblock %}
