--- a/templates/researchers/connections.html
+++ b/templates/researchers/connections.html
@@ -90,7 +90,7 @@
                 <div class="flex-this column dashcard-text-container">
                     <div><h3 class="dashcard-h3 darkteal-text">{% firstof res.user.get_full_name res.user.username %}</h3></div>
                     <div>
-                        <p class="dashcard-subheader">Researcher | Location: {{ profile.get_location }} </p>
+                        <p class="dashcard-subheader">Researcher | Location: {{ researcher.user.user_profile.get_location }}</p>
                     </div>
                     <div><p class="dashcard-description description-sm">{% if res.description %}{{ res.description }} {% else %} No description provided. {% endif %}</p></div>
                 </div>
