--- a/templates/partials/infocards/_service-provider-card.html
+++ b/templates/partials/infocards/_service-provider-card.html
@@ -1,80 +1,94 @@
 {% load static %}
 <div class="dashcard">
-    <div class="flex-this space-between">
-        <div class="flex-this">
+    <div class="flex-this">
 
-            <!-- Image -->
-            <div class="dashcard-img-container">
-                <img loading="lazy"
-                    class="profile-img"
-                    src="{% if service_provider.image %} {{ service_provider.image.url }} {% else %} {% static 'images/placeholders/service-provider-place.jpg' %}{% endif %}"
-                    alt="{{ service_provider.name }} image"
-                >
-                {% if service_provider and service_provider.is_certified %}
-                    <div class="certified-overlay">
-                        <img
-                            src="{% static 'images/logos/sp-badge-orange.png' %}"
-                            width="157px"
-                            height="47px"
-                        >
-                    </div>
-                {% endif %}
+        <!-- Account Image -->
+        <div class="dashcard-img-container">
+            <img loading="lazy"
+                class="profile-img"
+                src="{% if service_provider.image %} {{ service_provider.image.url }} {% else %} {% static 'images/placeholders/service-provider-place.jpg' %}{% endif %}"
+                alt="{{ service_provider.name }} image"
+            >
+            {% if service_provider.is_certified %}
+                <div class="certified-overlay">
+                    <img
+                        src="{% static 'images/logos/sp-badge-orange.png' %}"
+                        width="157px"
+                        height="47px"
+                    >
+                </div>
+            {% endif %}
+        </div>
+
+        <!-- Account Information -->
+        <div class="flex-this column w-50">
+            <div>
+                <h3 class="dashcard-h3 darkteal-text">{{ service_provider.name }}</h3>
             </div>
-
-            <!-- Account Information -->
-            <div class="flex-this column dashcard-text-container">
-                <h3 class="dashcard-h3 darkteal-text">{{ service_provider }}</h3>
+            <div>
                 <p class="dashcard-subheader">Service Provider</p>
+            </div>
+            <div>
                 <p class="dashcard-description description-sm">
-                    {% if service_provider.description %}{{ service_provider.description }} {% else %} No description provided. {% endif %}
+                    {% if service_provider.description %}{{ service_provider.description }}{% else %}No description provided.{% endif %}
                 </p>
             </div>
-
         </div>
 
         <!-- Button and OTC Notice -->
-        <div class="dashcard-btn-container">
-            <div class="flex-this gap-half">
+        <div class="dashcard-btn-container ml-auto">
 
-                {% if '/registry/' in request.path %}
-                    <div>
-                        <div class="mb-16">
-                            <a
-                                class="primary-btn action-btn"
-                                href="{% url 'public-service-provider' service_provider.id %}"
-                            >View public page</a>
-                        </div>
+            {% if '/registry/' in request.path or '/connections/' in request.path %}
+                <!-- View Public Page -->
+                <div>
+                    <a
+                        class="primary-btn action-btn"
+                        href="{% url 'public-service-provider' service_provider.id %}"
+                    >
+                        View public page
+                    </a>
+                    {% if '/registry/' in request.path %}
                         {% if service_provider.otc_service_provider_url.all %}
-                            <div class="flex-this flex-end">
-                                <img class="pointer-event-none" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="60px" alt="Open to Collaborate Notice icon. Black square with the top right corner folded and two white hands reaching toward each other from top to bottom over a white horizontal rectangle.">
+                            <!-- OTC Notice -->
+                            <div class="flex-this flex-end mt-16">
+                                <img
+                                    class="pointer-event-none"
+                                    src="{% static 'images/notices/ci-open-to-collaborate.png' %}"
+                                    width="60px"
+                                    alt="Open to Collaborate Notice icon. Black square with the top right corner folded and two white hands reaching toward each other from top to bottom over a white horizontal rectangle."
+                                >
                             </div>
                         {% endif %}
-                    </div>
-                {% endif %}
+                    {% endif %}
+                </div>
+            {% endif %}
 
-                {% if '/dashboard/' in request.path %}
+            {% if '/dashboard/' in request.path %}
+                <!-- View Account -->
+                <div class="mr-16">
+                    <a
+                        class="primary-btn action-btn"
+                        href="{% url 'service-provider-notices' service_provider.id %}"
+                    >
+                        View account
+                    </a>
+                </div>
+
+                <!-- Notification -->
+                {% include 'snippets/notifications.html' with scope=service_provider %}
+
+                {% if request.user == service_provider.account_creator %}
+                    <!-- Settings -->
                     <div>
                         <a
-                            class="primary-btn action-btn"
-                            href="{% url 'service-provider-notices' service_provider.id %}"
-                        >View account</a>
-                    </div>
-
-                    <div class="ml-8 flex-this gap-half">
-                        <!-- Notification -->
-                        {% include 'snippets/notifications.html' with scope=service_provider %}
-
-                        <!-- Settings -->
-                        {% if request.user == service_provider.account_creator %}
-                            <div>
-                                <a href="{% url 'update-service-provider' service_provider.id%}" class="round-btn-small darkteal-text primary-btn white-btn"><i class="m-0 fa fa-cog" aria-hidden="true"></i></a>
-                            </div>
-                        {% endif %}
+                            href="{% url 'update-service-provider' service_provider.id%}"
+                            class="round-btn-small darkteal-text primary-btn white-btn"
+                        >
+                            <i class="m-0 fa fa-cog" aria-hidden="true"></i>
+                        </a>
                     </div>
                 {% endif %}
-
-            </div>
+            {% endif %}
         </div>
-
     </div>
 </div>
