--- a/templates/public.html
+++ b/templates/public.html
@@ -546,7 +546,13 @@
             <!-- Connections Section -->
             <div>
                 <h3>Connections</h3>
-                No Connections to display yet
+                {% if sp_connections %}
+                    <div>
+                        {% include 'partials/_connections.html' %}
+                    </div>
+                {% else %}
+                    No Connections to display yet
+                {% endif %}
             </div>
         {% endif %}
     {% endif %}
