--- a/templates/partials/_update-boundary-main-area.html
+++ b/templates/partials/_update-boundary-main-area.html
@@ -42,8 +42,9 @@
         max-width: 560px;
     }
 
-    #edit_name_icon{
-        margin-left: 10px
+    #edit_name_icon {
+        margin-left: 10px;
+        margin-top: 11px;
     }
     #edit_name_icon.disabled {
         color: grey;
@@ -105,7 +106,7 @@
                            onblur="disableNameInput(this)"
                     >
                     {% if 'native-land.ca' not in community.source_of_boundary %}
-                        <i id="edit_name_icon" class="fa-solid fa-edit fa-2x pointer"
+                        <i id="edit_name_icon" class="fa-solid fa-edit sm pointer"
                             onclick="enableNameInput(this)"
                         ></i>
                     {% endif %}
